--- a/tfl-service/pom.xml
+++ b/tfl-service/pom.xml
@@ -26,5 +26,11 @@
             <artifactId>jcsv</artifactId>
             <version>${jcsv.version}</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
