Getting drawing of paths actually working

--- a/tfl-service/config.yml
+++ b/tfl-service/config.yml
@@ -1,9 +1,10 @@
 http:
   port: 8080
   adminPort: 8081
+  rootPath: /api/*
 
 logging:
   level: INFO
 
   loggers:
-    "com.furnaghan": TRACE
+    "com.furnaghan": DEBUG
